--- a/index.css
+++ b/index.css
@@ -5,4 +5,10 @@
     margin-left: auto;
     margin-right: auto;
     margin-top: 5rem;
+    flex: 1 0 25%;
+}
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 50px;
 }
