--- a/index.css
+++ b/index.css
@@ -4,11 +4,18 @@
 .card {
     margin-left: auto;
     margin-right: auto;
-    margin-top: 5rem;
+    margin-top: 2rem;
     flex: 1 0 25%;
 }
 .container {
     display: flex;
     flex-wrap: wrap;
-    gap: 50px;
+    gap: 20px;
+}
+
+.card-img-top {
+    image-rendering: pixelated;
+}
+.card-title {
+    text-align: center;
 }
