--- a/index.css
+++ b/index.css
@@ -6,7 +6,9 @@
     margin-right: auto;
     margin-top: 2rem;
     flex: 1 0 25%;
+    max-width: 30%;
 }
+
 .container {
     display: flex;
     flex-wrap: wrap;
@@ -14,6 +16,9 @@
 }
 
 .card-img-top {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 50%;
     image-rendering: pixelated;
 }
 .card-title {
