--- a/index.css
+++ b/index.css
@@ -1,26 +1,13 @@
 .pkmLogo {
     width: 10%;
 }
-.card {
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 2rem;
-    flex: 1 0 25%;
-    max-width: 30%;
-}
-
 .container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
+    /* display: flex;
+    flex-wrap: wrap; */
 }
-
 .card-img-top {
-    margin-left: auto;
+    /* margin-left: auto;
     margin-right: auto;
-    max-width: 50%;
+    max-width: 50%; */
     image-rendering: pixelated;
-}
-.card-title {
-    text-align: center;
 }
