made it work somehow

--- a/index.css
+++ b/index.css
@@ -49,10 +49,10 @@ h1 {
 /* Modal Content/Box */
 .modal-content {
     background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
+    margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+    max-width: 80%;
 }
 
 /* The Close Button */
@@ -68,4 +68,11 @@ h1 {
     color: black;
     text-decoration: none;
     cursor: pointer;
+}
+
+.pokemoncard {
+    text-align: center;
+}
+.modal-open {
+    margin-bottom: 10px;
 }
