--- a/index.css
+++ b/index.css
@@ -19,7 +19,7 @@ h3 {
 
 .card-img-top {
     image-rendering: pixelated;
-    max-width: 100%;
+    max-width: 50%;
 }
 
 .progress {
@@ -53,7 +53,7 @@ h1 {
     margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
-    max-width: 100%;
+    max-width: 450px;
 }
 
 /* The Close Button */
