--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 * {
     font-family: "Plus Jakarta Sans", sans-serif;
     font-family: "Silkscreen", cursive;
+    background-color: black;
 }
 
 .pkmLogo {
@@ -53,7 +54,7 @@ h1 {
     margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
-    max-width: 450px;
+    max-width: 500px;
 }
 
 /* The Close Button */
@@ -87,4 +88,11 @@ h1 {
 .close {
     text-align: left;
     color: black;
+}
+
+@media screen and (max-width: 441px) {
+    .modal-content {
+        min-width: 100%;
+        height: auto;
+    }
 }
