Fixed all the errors now theres just a delay when the buttons are clicked

--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 * {
     font-family: "Plus Jakarta Sans", sans-serif;
     font-family: "Silkscreen", cursive;
-    background-color: black;
+    /* background-color: black; */
 }
 
 .pkmLogo {
