--- a/index.css
+++ b/index.css
@@ -36,16 +36,16 @@ h1 {
 }
 /* The Modal (background) */
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    display: none;
+    position: fixed;
+    z-index: 1;
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0, 0, 0); /* Fallback color */
-    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
 }
 
 /* Modal Content/Box */
@@ -74,24 +74,28 @@ h1 {
 
 .pokemoncard {
     text-align: center;
-}
-.modal-open {
-    margin-bottom: 10px;
-}
-.flexmodal {
-    text-align: left;
-    display: flex;
-}
-.moreStats {
-    text-align: left;
-}
-.close {
-    text-align: left;
-    color: black;
-}
 
-@media screen and (max-width: 441px) {
-    .modal-content {
-        height: auto;
+    .modal-open {
+        margin-bottom: 10px;
     }
+    .flexmodal {
+        text-align: left;
+        display: flex;
+    }
+    .moreStats {
+        text-align: left;
+    }
+    .close {
+        text-align: left;
+        color: black;
+    }
+
+    @media screen and (max-width: 441px) {
+        .modal-content {
+            height: auto;
+        }
+    }
+}
+.hide {
+    display: block;
 }
