--- a/index.css
+++ b/index.css
@@ -54,7 +54,7 @@ h1 {
     margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
-    max-width: 550px;
+    max-width: 90%;
 }
 
 /* The Close Button */
@@ -74,28 +74,25 @@ h1 {
 
 .pokemoncard {
     text-align: center;
+}
+.modal-open {
+    margin-bottom: 10px;
+}
 
-    .modal-open {
-        margin-bottom: 10px;
-    }
-    .flexmodal {
-        text-align: left;
-        display: flex;
-    }
-    .moreStats {
-        text-align: left;
-    }
-    .close {
-        text-align: left;
-        color: black;
-    }
+.moreStats {
+    text-align: left;
+}
+.close {
+    text-align: left;
+    color: black;
+}
 
-    @media screen and (max-width: 441px) {
-        .modal-content {
-            height: auto;
-        }
+@media screen and (min-width: 1025px) {
+    .modal-content {
+        max-width: 30%;
     }
 }
+
 .hide {
     display: block;
 }
