--- a/index.css
+++ b/index.css
@@ -99,30 +99,26 @@ h1 {
         max-width: 30%;
     }
 }
-.loader {
-    width: 48px;
-    height: 48px;
-    border: 5px solid #fff;
-    border-bottom-color: transparent;
-    border-radius: 50%;
-    display: inline-block;
-    box-sizing: border-box;
-    animation: rotation 1s linear infinite;
-}
 
-@keyframes rotation {
-    0% {
-        transform: rotate(0deg);
-    }
+.classic-1 {
+    font-weight: bold;
+    font-family: monospace;
+    font-size: 30px;
+    display: grid;
+}
+.classic-1:before,
+.classic-1:after {
+    content: "Loading...";
+    grid-area: 1/1;
+    -webkit-mask: linear-gradient(90deg, #000 50%, #0000 0) 0 50%/2ch 100%;
+    animation: c1 1s infinite cubic-bezier(0.5, 220, 0.5, -220);
+}
+.classic-1:after {
+    -webkit-mask-position: 1ch 50%;
+    --s: -1;
+}
+@keyframes c1 {
     100% {
-        transform: rotate(360deg);
+        transform: translateY(calc(var(--s, 1) * 0.1%));
     }
-}
-
-#load-data {
-    display: none;
-}
-
-#load-data.show {
-    display: block;
 }
